src/css/general/theme.css
/* ... */
.full-width-center-overlay {
    margin: 10px;
    /* full-height - button panel height */
    height: calc(100% - 63px);
}

.full-screen-center-overlay {
    /*
      full-height - button panel height
      - top + bottom margins
      - opsera footer
     */
    height: calc(100vh - 20px - 21px);
}

.full-screen-center-overlay-with-buttons {
    /*
      full-height - button panel height
      - top + bottom margins
      - opsera footer
      - button container size (with margins)
     */
    height: calc(100vh - 20px - 21px - 38px - 1rem);
}

.full-screen-overlay-panel-body {
    overflow-y: auto;
    /* full-height - (10px x 2 top + bottom margins - button panel height) */
    height: calc(100vh - 20px - 70px);
    max-height: calc(100vh - 20px - 70px);
}

.full-screen-overlay-panel-body-with-buttons {
    overflow-y: auto;
    /*
      full-height
      - top + bottom margins
      - title height
      - button panel height (with margins)
      - footer height
    */
    height: calc(100vh - 20px - 48px - 38px - 2rem);
    max-height: calc(100vh - 20px - 48px - 38px - 2rem);
}

.full-screen-overlay-selection-container {
    overflow-y: auto;
    /* full-height
    - top + bottom margins
    - title height
    - button panel height
    - filter container taken space
    */
    height: calc(100vh - 20px - 48px - 63px - 85px);
    max-height: calc(100vh - 20px - 48px - 63px - 85px);
}

.full-screen-overlay-tab-panel-body-with-buttons {
    overflow-y: hidden;
    height: calc(100vh - 20px - 48px - 63px - 32px);
    max-height: calc(100vh - 20px - 48px - 63px - 32px);
    border-bottom: 1px solid #dee2e6;
}

.full-screen-overlay-tab-panel-inner-body-with-buttons {
    overflow-y: auto;
    height: calc(100vh - 20px - 48px - 63px - 68px);
    max-height: calc(100vh - 20px - 48px - 63px - 68px);
}

.overlay-margin {
    /* height is 100% - 10px x2 top and bottom margins */
    height: calc(100% - 20px);
    margin: 10px;
}

.center-overlay-shadow-background {
    width: 100%;
    background-color: rgba(0,0,0,0.7);
}

.info-overlay {
    z-index: 5000;
}

.overlay-panel {
    position: fixed;
    overflow-x: hidden;
    z-index: 1500;

    /* full-height - (10px x 2 top + bottom margins) */
    height: calc(100vh - 20px);
    max-height: calc(100vh - 20px);
}

.overlay-panel-body {
    overflow-y: auto;
    /* full-height - (10px x 2 top + bottom margins - title height) */
    min-height: 500px;
    height: calc(100% - 48px);
    max-height: calc(100% - 48px);
}

/* Confirmation panel */
.confirmation-overlay-panel {
    position: fixed;
    overflow-x: hidden;
    z-index: 1500;
    height: 100%;
    top: calc(50vh - 300px);
    left: calc(50vw - 375px);
}

.confirmation-overlay-panel-body {
    max-height: calc(100% - 48px);
    min-width: 750px;
    max-width: 750px;
}

.confirmation-overlay-panel-body-text {
    font-size: 1.2em;
}

/* End Overlay Panel styling */

/* Loading Input Icon Styling */
.loading-input-wrapper {
    display:inline-block;
    position: relative;
}

.loading-input-wrapper:after {
    font-family: 'FontAwesome';
    content: '\f110';
    position: absolute;
    right: 6px;
    top: 7px;
    -webkit-animation: fa-spin 2s infinite linear;
    animation: fa-spin 2s infinite linear;
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.5;
}
/* End Loading Input Icon Styling */

/* Loading Dialog Styling */
.loading-dialog {
    font-size: 1.3em;
}

/* End Loading Dialog Styling */

/* Page Link Card Styling */
.page-link-card {
    background-color: #FFF;
    color: #000000;
    padding: 2px 2px 2px 10px;
    min-height: 50px;
}

.page-link-card-icon {
    border: 1px solid black;
    margin-top: 3px;
}

.page-link-card:hover {
    cursor: pointer;
    padding-left: 2px;
    color: #352F54; /* Opsera Primary Color */
    border-left: 8px solid #46415C; /* Opsera Secondary Color */
}

.page-link-card-title-text {
    font-size: 1.25em;
}

.page-link-card-divider {

}

.widget-data-block-base:hover {
    border-color: #7F74B9 !important;
}

/* End Page Link Card Styling */

